--- a/.github/workflows/docker-build-static.yml
+++ b/.github/workflows/docker-build-static.yml
@@ -53,7 +53,7 @@ jobs:
   build-ui:
     runs-on: ubuntu-latest
     container:
-      image: martadinata666/rust-dev:latest
+      image: martadinata666/rust:latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3.3.0
@@ -92,7 +92,7 @@ jobs:
       matrix:
         target: [armv7-unknown-linux-gnueabihf,aarch64-unknown-linux-musl,x86_64-unknown-linux-musl]
     container:
-      image: martadinata666/rust-dev:latest
+      image: martadinata666/rust:latest
       env:
         CARGO_TARGET_ARMV7_UNKNOWN_LINUX_GNUEABIHF_LINKER: arm-linux-gnueabihf-gcc
         CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_LINKER: aarch64-linux-musl-gcc
