--- a/.github/workflows/docker-build-static-personal.yml
+++ b/.github/workflows/docker-build-static-personal.yml
@@ -146,7 +146,7 @@ jobs:
           ports:
             - 3306
           env:
-            MYSQL_USER: lldap
+            MYSQL_USER: lldapuser
             MYSQL_PASSWORD: lldappass
             MYSQL_DATABASE: lldap
             MYSQL_ROOT_PASSWORD: rootpass
@@ -156,7 +156,7 @@ jobs:
            ports:
              - 5432
            env:
-             POSTGRES_USER: lldap
+             POSTGRES_USER: lldapuser
              POSTGRES_PASSWORD: lldappass
              POSTGRES_DB: lldap
 
@@ -168,12 +168,12 @@ jobs:
        - name: run lldap with postgres DB
          run: bin/x86_64-unknown-linux-musl-lldap-bin/lldap
          env:
-           - LLDAP_database_url: postgres://lldap:lldappass@db/lldap
+           LLDAP_database_url: postgres://lldapuser:lldappass@localhost/lldap
 
        - name: run lldap with mariadb DB (MySQL Compatible)
          run: bin/x86_64-unknown-linux-musl-lldap-bin/lldap
          env:
-           - LLDAP_database_url: mysql://lldapuser:lldappass@db/lldap
+           LLDAP_database_url: mysql://lldapuser:lldappass@localhost/lldap
 
 
 
