--- a/.github/workflows/docker-build-static-personal.yml
+++ b/.github/workflows/docker-build-static-personal.yml
@@ -165,6 +165,8 @@ jobs:
          uses: actions/download-artifact@v3
          with:
            path: bin/
+       - name: Set executables
+         run: chmod +x bin/*/lldap
        - name: run lldap with postgres DB
          run: bin/x86_64-unknown-linux-musl-lldap-bin/lldap
          env:
