--- a/.github/workflows/docker-build-static-personal.yml
+++ b/.github/workflows/docker-build-static-personal.yml
@@ -168,12 +168,12 @@ jobs:
        - name: Set executables
          run: chmod +x bin/*/lldap
        - name: run lldap with postgres DB
-         run: bin/x86_64-unknown-linux-musl-lldap-bin/lldap
+         run: bin/x86_64-unknown-linux-musl-lldap-bin/lldap run
          env:
            LLDAP_database_url: postgres://lldapuser:lldappass@localhost/lldap
 
        - name: run lldap with mariadb DB (MySQL Compatible)
-         run: bin/x86_64-unknown-linux-musl-lldap-bin/lldap
+         run: bin/x86_64-unknown-linux-musl-lldap-bin/lldap run
          env:
            LLDAP_database_url: mysql://lldapuser:lldappass@localhost/lldap
 
