--- a/.github/workflows/docker-build-static-personal.yml
+++ b/.github/workflows/docker-build-static-personal.yml
@@ -170,6 +170,7 @@ jobs:
        - name: run lldap with postgres DB
          run: |
               bin/x86_64-unknown-linux-musl-lldap-bin/lldap run &
+              sleep 10s
               bin/x86_64-unknown-linux-musl-lldap-bin/lldap healthcheck
          env:
            LLDAP_database_url: postgres://lldapuser:lldappass@localhost/lldap
@@ -180,6 +181,7 @@ jobs:
        - name: run lldap with mariadb DB (MySQL Compatible)
          run: |
               bin/x86_64-unknown-linux-musl-lldap-bin/lldap run &
+              sleep 10s
               bin/x86_64-unknown-linux-musl-lldap-bin/lldap healthcheck
          env:
            LLDAP_database_url: mysql://lldapuser:lldappass@localhost/lldap
