--- a/.github/workflows/docker-build-static.yml
+++ b/.github/workflows/docker-build-static.yml
@@ -140,9 +140,9 @@ jobs:
           name: ${{ matrix.target }}-migration-tool-bin
           path: target/${{ matrix.target }}/release/migration-tool
 
-  lldap-database-integration-test:
+  lldap-database-init-test:
     needs: [build-ui,build-bin]
-    name: LLDAP test
+    name: LLDAP database init test
     runs-on: ubuntu-latest
     services:
         mariadb:
@@ -206,6 +206,101 @@ jobs:
            LLDAP_database_url: sqlite://users.db?mode=rwc
            LLDAP_ldap_port: 3892
            LLDAP_http_port: 17172
+
+  lldap-database-migration-test:
+    needs: [build-ui,build-bin]
+    name: LLDAP database migration test
+    runs-on: ubuntu-latest
+    services:
+        mariadb:
+          image: mariadb:latest
+          ports:
+            - 3306:3306
+          env:
+            MYSQL_USER: lldapuser
+            MYSQL_PASSWORD: lldappass
+            MYSQL_DATABASE: lldap
+            MYSQL_ROOT_PASSWORD: rootpass
+
+        postgresql:
+           image: postgres:latest
+           ports:
+             - 5432:5432
+           env:
+             POSTGRES_USER: lldapuser
+             POSTGRES_PASSWORD: lldappass
+             POSTGRES_DB: lldap
+
+    steps:
+       - name: Download artifacts
+         uses: actions/download-artifact@v3
+         with:
+           name: x86_64-unknown-linux-musl-lldap-bin
+           path: bin/
+       - name: Where is the bin?
+         run: ls -alR bin
+         
+       - name: Set executables to LLDAP
+         run: chmod +x bin/lldap
+         
+       - name: Install sqlite3
+         run: sudo apt update && sudo apt install -y sqlite3 ldap-utils
+         
+       - name: Run lldap with sqlite DB and healthcheck
+         run: |
+              bin/lldap run &
+              sleep 10s
+              bin/lldap healthcheck
+         env:
+           LLDAP_database_url: sqlite://users.db?mode=rwc
+           LLDAP_ldap_port: 3890
+           LLDAP_http_port: 17170
+           LLDAP_LDAP_USER_PASS: ldappass
+           LLDAP_JWT_SECRET: somejwtsecret
+
+       - name: Stop LLDAP
+         run: pkill lldap
+         
+       - name: Export and Converting DB
+         run: |
+              echo "Export to postgres"
+              sqlite3 ./users.db .dump | sed -r -e "s/X'([[:xdigit:]]+'[^'])/'\\\x\\1/g" \-e 's/^CREATE TABLE IF NOT EXISTS "([^"]*)".*/DELETE FROM \1;/' -e '/^PRAGMA.*/d' > ./psql.sql
+              echo "Export to mysql"
+              sqlite3 /path/to/lldap/config/users.db .dump | -e 's/^CREATE TABLE IF NOT EXISTS "([^"]*)".*/DELETE FROM \1;/' -e '/^PRAGMA.*/d' > ./mariadb.sql
+       - name: Copy converted db to 
+         run: docker cp ./psql.sql postgresql:/tmp/psql.sql
+              docker exec -it postgres psql -d lldap -U lldapuser -plldappass -W < /path/to/dump.sql
+              docker cp ./mariadb.sql mariadb:/tmp/mariadb.sql
+              docker exec -it mariadb mariadb -u lldap -plldappass lldap< /tmp/mariadb.sql
+
+       - name: Run lldap with mariadb DB (MySQL Compatible) and healthcheck
+         run: |
+              bin/lldap run &
+              sleep 10s
+              bin/lldap healthcheck
+         env:
+           LLDAP_database_url: mysql://lldapuser:lldappass@localhost/lldap
+           LLDAP_ldap_port: 3891
+           LLDAP_http_port: 17171
+           LLDAP_LDAP_USER_PASS: ldappass
+           LLDAP_JWT_SECRET: somejwtsecret
+
+       - name: Run lldap with postgres DB and healthcheck
+         run: |
+              bin/lldap run &
+              sleep 10s
+              bin/lldap healthcheck
+         env:
+           LLDAP_database_url: postgres://lldapuser:lldappass@localhost/lldap
+           LLDAP_ldap_port: 3892
+           LLDAP_http_port: 17172
+           LLDAP_LDAP_USER_PASS: ldappass
+           LLDAP_JWT_SECRET: somejwtsecret       
+           
+       - name: Test Admin
+         run: |
+              ldapsearch -H ldap://lldap:3891 -LLL -D "uid=admin,ou=people,dc=example,dc=com" -w 'ldappass' -s "One" -b "ou=people,dc=example,dc=com"
+              ldapsearch -H ldap://lldap:3892 -LLL -D "uid=admin,ou=people,dc=example,dc=com" -w 'ldappass' -s "One" -b "ou=people,dc=example,dc=com"
 
 
   build-docker-image:
