--- a/.github/workflows/create-release-artifacts.yml
+++ b/.github/workflows/create-release-artifacts.yml
@@ -29,8 +29,12 @@ jobs:
              mv bin/aarch64-unknown-linux-musl-migration-tool-bin/migration-tool bin/aarch64-migration-tool
              mv bin/x86_64-unknown-linux-musl-migration-tool-bin/migration-tool bin/amd64-migration-tool
              mv bin/armv7-unknown-linux-gnueabihf-migration-tool-bin/migration-tool bin/armhf-migration-tool
+             mv bin/aarch64-unknown-linux-musl-lldap-bin/lldap bin/aarch64-lldap_set_password
+             mv bin/x86_64-unknown-linux-musl-lldap-bin/lldap bin/amd64-lldap_set_password
+             mv bin/armv7-unknown-linux-gnueabihf-lldap-bin/lldap bin/armhf-lldap_set_password
              chmod +x bin/*-lldap
              chmod +x bin/*-migration-tool
+             chmod +x bin/*-lldap_set_password
 
       - name: Download llap ui artifacts
         uses: actions/download-artifact@v3
@@ -58,6 +62,9 @@ jobs:
              mv bin/aarch64-migration-tool aarch64-lldap/migration-tool
              mv bin/amd64-migration-tool amd64-lldap/migration-tool
              mv bin/armhf-migration-tool armhf-lldap/migration-tool
+             mv bin/aarch64-lldap_set_password aarch64-lldap/lldap_set_password
+             mv bin/amd64-lldap_set_password amd64-lldap/lldap_set_password
+             mv bin/armhf-lldap_set_password armhf-lldap/lldap_set_password
              cp -r app aarch64-lldap/
              cp -r app amd64-lldap/
              cp -r app armhf-lldap/
