--- a/.github/workflows/docker-build-static-personal.yml
+++ b/.github/workflows/docker-build-static-personal.yml
@@ -101,25 +101,31 @@ jobs:
             lldap-bin-${{ matrix.target }}-
       - name: show my env
         run: env
+
       - name: Add target
         run: rustup target add ${{ matrix.target }}
+
       - name: compile ${{ matrix.target }}
         run: cargo build --target=${{ matrix.target }} --release -p lldap -p migration-tool -p lldap_set_password
+
       - name: check path
-        run: ls -al target/release
+        run: ls -alr target/release
+
       - name: upload ${{ matrix.target}} lldap artifacts
         uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.target}}-lldap-bin
           path: target/${{ matrix.target }}/release/lldap
+
       - name: upload ${{ matrix.target }} migration tool artifacts
         uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.target }}-migration-tool-bin
           path: target/${{ matrix.target }}/release/migration-tool
-      - name: upload ${{ matrix.target }}-set-password
+
+      - name: upload ${{ matrix.target }}-set-password-bin
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ matrix.target }}/release/lldap_set_password
+          name: ${{ matrix.target }}-lldap-set-password-bin
           path: target/${{ matrix.target }}/release/lldap_set_password
 
