--- a/.github/workflows/docker-build-static-personal.yml
+++ b/.github/workflows/docker-build-static-personal.yml
@@ -2,6 +2,9 @@ name: Docker Static Personal
 
 on:
   workflow_call:
+  push:
+    branches:
+      - "personal"
 
 env:
   CARGO_TERM_COLOR: always
