Update and rename segfault-deployment to segfault-deployment.yml

--- a/.github/workflows/segfault-deployment.yml
+++ b/.github/workflows/segfault-deployment.yml
@@ -1,7 +1,8 @@
 name: Segfault Deployment
-on: [push]
-  branches:
-    - personal
+on:
+  push:
+    branches:
+      - personal
 jobs:
   build:
     name: Deploy
