--- a/.github/workflows/docker-build-static-armhf.yml
+++ b/.github/workflows/docker-build-static-armhf.yml
@@ -17,6 +17,7 @@ jobs:
       env:
         CARGO_TERM_COLOR: always
         RUSTFLAGS: -Ctarget-feature=+crt-static
+        CARGO_HOME: ${GITHUB_WORKSPACE}/.cargo
     steps:
       - uses: actions/checkout@v3
       - uses: actions/cache@v3
@@ -34,7 +35,7 @@ jobs:
         run: apk add build-base rust rustup
         
       - name: Add target
-        run: rustup target add ${{ matrix.target }}
+        run: rustup-init target add ${{ matrix.target }}
 
       - name: compile ${{ matrix.target }}
         run: cargo build --target=${{ matrix.target }} --release -p lldap -p migration-tool -p lldap_set_password
