--- a/.github/workflows/docker-build-static-personal.yml
+++ b/.github/workflows/docker-build-static-personal.yml
@@ -1,5 +1,6 @@
 name: Docker Static Personal
 
+
 on:
   workflow_call:
   push:
@@ -39,7 +40,7 @@ jobs:
       - name: build frontend
         run: |
              cd app
-             wasm-pack build --target web --release -- --offline
+             wasm-pack build --target web --release --mode no-install -- --offline
       - name: check path
         run: ls -al app/
       - name: upload ui artifacts
@@ -82,7 +83,7 @@ jobs:
         run: rustup target add ${{ matrix.target }}
 
       - name: compile ${{ matrix.target }}
-        run: cargo build --target=${{ matrix.target }} --release -p lldap -p migration_tool -p lldap_set_password
+        run: cargo build --target=${{ matrix.target }} --release -p lldap -p lldap_migration_tool -p lldap_set_password
 
       - name: check path
         run: ls -alr target/release
