--- a/.github/workflows/docker-build-static-personal.yml
+++ b/.github/workflows/docker-build-static-personal.yml
@@ -38,6 +38,8 @@ jobs:
              cargo install wasm-pack
              rustup target add wasm32-unknown-unknown
       - name: build frontend
+        env:
+          RUST_LOG: "debug"
         run: |
              cd app
              wasm-pack build --target web --release --mode no-install -- --offline
