--- a/.github/workflows/docker-build-static-personal.yml
+++ b/.github/workflows/docker-build-static-personal.yml
@@ -55,59 +55,12 @@ jobs:
 
   build-bin:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        target: [armv7-unknown-linux-musleabihf,aarch64-unknown-linux-musl,x86_64-unknown-linux-musl]
-    container:
-      image: martadinata666/rust:latest
-      options: --user root
-      env:
-        CARGO_TERM_COLOR: always
-        RUSTFLAGS: -Ctarget-feature=+crt-static
-        CARGO_HOME: ${GITHUB_WORKSPACE}/.cargo
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/cache@v3
-        with:
-          path: |
-            .cargo/registry/index
-            .cargo/registry/cache
-            .cargo/git/db
-            target/
-          key: lldap-bin-${{ matrix.target }}-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            lldap-bin-${{ matrix.target }}-
-      - name: show my env
-        run: env
-
-      - name: Add target
-        run: rustup target add ${{ matrix.target }}
-
-      - name: compile ${{ matrix.target }}
-        run: cargo build --target=${{ matrix.target }} --release -p lldap -p lldap_migration_tool -p lldap_set_password
-
-      - name: check path
-        run: ls -alr target/release
-
-      - name: upload ${{ matrix.target}} lldap artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ matrix.target}}-lldap-bin
-          path: target/${{ matrix.target }}/release/lldap
-
-      - name: upload ${{ matrix.target }} migration tool artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ matrix.target }}-migration-tool-bin
-          path: target/${{ matrix.target }}/release/migration-tool
-
-      - name: upload ${{ matrix.target }}-set-password-bin
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ matrix.target }}-lldap-set-password-bin
-          path: target/${{ matrix.target }}/release/lldap_set_password
+      - name: Build Triplet
+        uses: ./.github/workflows/build-bin.yml
 
   migration-test:
+    runs-on: ubuntu-latest
     steps:
       - name: mariadb-database-migrations-test
         uses: ./.github/workflows/database-mariadb-migration-test.yml
@@ -116,11 +69,13 @@ jobs:
         uses: ./.github/workflows/database-postgres-migration-test.yml
 
   init-test:
+    runs-on:
     steps:
       - name: database init test
         uses: ./.github/workflows/database-init-test.yml
 
   segfault-deployment:
+    runs-on: ubuntu-latest
     steps:
       - name: deploy segfault
         uses: ./.github/workflows/segfault-deployment.yml
