--- a/.github/workflows/docker-build-static-personal.yml
+++ b/.github/workflows/docker-build-static-personal.yml
@@ -69,7 +69,7 @@ jobs:
         uses: ./.github/workflows/database-postgres-migration-test.yml
 
   init-test:
-    runs-on:
+    runs-on: ubuntu-latest
     steps:
       - name: database init test
         uses: ./.github/workflows/database-init-test.yml
