--- a/.github/workflows/database-mariadb-migration-test.yml
+++ b/.github/workflows/database-mariadb-migration-test.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   lldap-mariadb-database-migration-test:
-    needs: [build-binary]
+    needs: [build-bin]
     name: LLDAP mariadb database migration test
     runs-on: ubuntu-latest
     services:
