--- a/.github/workflows/build-bin.yml
+++ b/.github/workflows/build-bin.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   build-bin:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         target: [armv7-unknown-linux-musleabihf,aarch64-unknown-linux-musl,x86_64-unknown-linux-musl]
