--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -1,4 +1,4 @@
-name: Docker Static Personal
+name: build binary
 
 on:
   workflow_call:
@@ -37,41 +37,6 @@ env:
 # cache based on Cargo.lock
 
 jobs:
-  build-ui:
-    runs-on: ubuntu-latest
-    container:
-      image: martadinata666/rust:latest
-      options: --user root
-    steps:
-      - name: Pull from git
-        run: |
-              sudo apt update
-              sudo apt -y install gzip
-      - uses: actions/checkout@v3
-      - uses: actions/cache@v3
-        with:
-          path: |
-            cargo/registry/index
-            cargo/registry/cache
-            cargo/git/db
-            target
-          key: lldap-ui-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            lldap-ui-
-      - name: install wasm-pack via cargo
-        run: |
-             cargo install wasm-pack
-             rustup target add wasm32-unknown-unknown
-      - name: build frontend
-        run: ./app/build.sh
-      - name: check path
-        run: ls -al app/
-      - name: upload ui artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: ui
-          path: app/
-
   build-bin:
     runs-on: ubuntu-latest
     strategy:
